Fix typo in ChangeLog